[Fix] duplicate notice (#122)
* refactor(CommonNoticeFormatDto): Builder의 서식 지정자를 private로 변경

* fix(NoticeJdbcRepository): 빼먹은 학과 이름 추가

* feat(NoticeUpdateSupport): NoticeUpdater의 공통로직 추출

* refactor(DepartmentName): DepartmentName을 찾아오는 로직을 cache를 활용하도록 리팩토링

* fix(NoticeJdbcRepository): 학과이름 인자 추가

* refactor(CategoryName#fromStringName): String인자로 해당 Enum값을 찾아오는 로직 리패토링

* refactor: Java 17로 변경후 기존의 .collect(Collectors.toList()) 로직을 toList()로 변경한다

* feat: 더이상 사용하지 않는 에노테이션 제거

* feat: 중복된 학과 공지 제거 SQL문 추가

* refactor: 테스트에서 서식 지정자 제거

* fix: SQL문에서 테이블 중복 이름 오류 수정